--- a/.gitignore
+++ b/.gitignore
@@ -26,4 +26,9 @@ AGENTS.md
 *Zone.Identifier
 tmp.md
 MyNotes.md
-artifacts/
+artifacts/*.png
+artifacts/hf_data
+artifacts/langchain_index
+artifacts/.locks/
+artifacts/models--cross-encoder--ms-marco-MiniLM-L-6-v2/
+artifacts/models--sentence-transformers--all-MiniLM-L6-v2/
