Rerank multi-query retrieval with base question Added few parameters for selecting CPU/GPU Feat: Implement asynchronous parallelization in agentic RAG pipeline Feat: Add AGENTIC_SEQUENTIAL_RETRIEVAL option and fix async call issues feat: Implement batch processing for Agentic RAG and langchain_dataset_metrics.py

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ artifacts/langchain_index
 artifacts/.locks/
 artifacts/models--cross-encoder--ms-marco-MiniLM-L-6-v2/
 artifacts/models--sentence-transformers--all-MiniLM-L6-v2/
+_site/
+*.faiss
+run_train_pt.sh
+train_pt.py
